--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,13 @@
             <version>3.2.6.RELEASE</version>
         </dependency>
 
+        <!-- Spring Security Tag Liberies -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-taglibs</artifactId>
+            <version>3.2.0.RELEASE</version>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>FitnessTracker</finalName>
