--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,24 @@
             <version>3.2.0.RELEASE</version>
         </dependency>
 
+        <!-- LDAP -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.5.6</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.directory.server</groupId>
+            <artifactId>apacheds-all</artifactId>
+            <version>1.5.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-ldap</artifactId>
+            <version>3.2.0.RELEASE</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>FitnessTracker</finalName>
